<resources>
    <string name="app_name">Maze Explorer</string>
    <string name="start_page">Select Maze Size</string>
    <string name="back">Back</string>
    <string name="start_maze">Start Maze</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congrats">Congrats!</string>
    <string name="todo">TODO</string>
    <string name="how_to_play">How To Play</string>
    <string name="take_a_victory_picture">Take a Victory Picture</string>
    <string name="goal">Goal</string>
    <string name="goal_show_text">The goal tile will only show up when all other tiles have been explored</string>
    <string name="actions">Actions</string>
    <string name="goal_text">Reach the goal tile with the player piece</string>
    <string name="swipe_text">Swipe in the direction you want the player to move</string>
</resources>
