<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/background">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DisplayText"
            android:text="@string/start_page"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/RowsText" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <Button
            android:text="@string/start_maze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/StartMazeButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ColumnsEdit"/>
    <TextView
            android:text="@string/columns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ColumnsText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ColumnsEdit" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RowsEdit"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/ColumnsEdit"
            android:baselineAligned="false"
            app:layout_constraintBottom_toTopOf="@+id/StartMazeButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ColumnsText"/>
    <TextView
            android:text="@string/rows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RowsText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DisplayText"
            app:layout_constraintBottom_toTopOf="@+id/RowsEdit"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/RowsEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ColumnsText"
            app:layout_constraintTop_toBottomOf="@+id/RowsText"/>

</android.support.constraint.ConstraintLayout>